# Fast-Forest

./: .gitignore  README.md
State_Machine/: .project  CMakeLists.txt  README.md  main.c
State_Machine/MB/: CMakeLists.txt
State_Machine/MB/Statemachine/inc/: StageControl.h  Statemachine.h
State_Machine/MB/Statemachine/src/: StageControl.c  Statemachine.c  Statemachine_sw.c
State_Machine/MB/inc/: FF12_Onboarding_main.h  pins.h
State_Machine/MB/src/: FF12_Onboarding_main.c  pins.c
State_Machine/cmake-microchip/Modules/Platform/: MicrochipMCU-C-XC16.cmake
State_Machine/dcu-ff12/: CMakeLists.txt
State_Machine/dcu-ff12/DCU_Dummy/inc/: DCU_Dummy_Application.h  DCU_Dummy_Scheduler.h  DCU_Dummy_SocketCAN.h
State_Machine/dcu-ff12/DCU_Dummy/src/: DCU_x86_Dummy.c  timer.c
State_Machine/dcu-ff12/DCU_FF12/: CMakeLists.txt
State_Machine/dcu-ff12/DCU_FF12/inc/: DCU_FF12.h  DCU_FF12_ADC.h  DCU_FF12_Application.h  DCU_FF12_CAN.h  DCU_FF12_Compiler.h  DCU_FF12_Configuration.h  DCU_FF12_EEPROM.h  DCU_FF12_GPIO.h  DCU_FF12_HWID.h  DCU_FF12_I2C.h  DCU_FF12_Oscillator.h  DCU_FF12_SPI.h  DCU_FF12_Scheduler.h  DCU_FF12_SoftStart.h  DCU_FF12_Status.h  DCU_FF12_Timer.h  DCU_FF12_VoltageSensing.h
State_Machine/dcu-ff12/inc/: DCU.h  DCU_cfg.h
State_Machine/docs/tasks/: task01.md
State_Machine/ecu.lib/: CMakeLists.txt
State_Machine/ecu.lib/inc/: Global_Types.h  Vehicle_Status.h
State_Machine/microchip/: CMakeLists.txt
State_Machine/microchip/inc/: libpic30.h  p33EP512MU810.h
State_Machine/test/: CMakeLists.txt
State_Machine/test/dcu-mock/: CMakeLists.txt
(+42 files in other folders)
